--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/pdq8Pcj/La-Mansion.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colegio Técnico Profecional La Mansión</title>
+    <title>Colegio Técnico Profesional La Mansión</title>
   </head>
   <body>
     <div id="root"></div>
